[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/arena/sheep_counter_area/sheep_counter_area.gd" type="Script" id=1]
[ext_resource path="res://src/ui/sheep_counter_area/SheepCounterUI.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.960784, 0.564706, 0.937255, 0.380392 )

[node name="SheepCounterArea" type="Area"]
visible = false
collision_layer = 0
collision_mask = 8
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="UI" type="Node" parent="."]

[node name="SheepCounterUI" parent="UI" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )

[connection signal="body_entered" from="." to="." method="_on_SheepCounterArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SheepCounterArea_body_exited"]
